--- a/Lista-2/exercicio-4.html
+++ b/Lista-2/exercicio-4.html
@@ -78,10 +78,13 @@
         <p>Todo o conteudo contido é de total dominio dessas duas figuras citadas acima.
             para mais informações ou quiser conhecer mais sobre o projeto siga as redes sociais.
         </p>
-        <a href="https://www.instagram.com/crocodilosgames?igsh=MTF4YXlxYzhpNmF0cQ==" target="_blank">Crocodilosgames</a>
-        <a href="https://www.instagram.com/ezequiel.albuquerque21?igsh=bHFxZjYxcjV6YWh3" target="_blank">Ezequiel Albuquerque</a>
-        <a href="https://www.instagram.com/adrianombs?igsh=MWtxMHNqbDIwZnR0cQ==" target="_blank">Adriano Miranda</a>
-        <a href="https://www.instagram.com/programavai?igsh=Y2tvNDFlMmp0OWtk" target="_blank">Programa VAI</a>
+        <ul>
+            <li><a href="https://www.instagram.com/crocodilosgames?igsh=MTF4YXlxYzhpNmF0cQ==" target="_blank">Crocodilosgames</a></li>
+            <li><a href="https://www.instagram.com/ezequiel.albuquerque21?igsh=bHFxZjYxcjV6YWh3" target="_blank">Ezequiel Albuquerque</a></li>
+            <li><a href="https://www.instagram.com/adrianombs?igsh=MWtxMHNqbDIwZnR0cQ==" target="_blank">Adriano Miranda</a></li>
+            <li><a href="https://www.instagram.com/programavai?igsh=Y2tvNDFlMmp0OWtk" target="_blank">Programa VAI</a></li>
+        </ul>
         </footer>
 </body>
+
 </html>
