--- a/Lista-2/exercicio-4.html
+++ b/Lista-2/exercicio-4.html
@@ -32,7 +32,7 @@
         <section>
             <h2>Conheça nosso primeiro jogo</h2>
             <h3>Entra na Roda</h3>
-            <img src="https://www.instagram.com/p/DIOrXJkx3UL/?igsh=bHB4NXhzenkyNmp5" alt="Entra na Roda" width="400" height="450">
+            <img src="https://img.freepik.com/vetores-gratis/ilustra-o-de-capoeira-desenhada_52683-136858.jpg?w=360" alt="Entra na Roda" width="400" height="450">
             <p>O nosso primeiro jogo é de capoeira, uma expressão cultural brasileira que faz parte da nossa identidade.
                 Uma arte que mitstura luta, dança e musicalidade que ficou conhecida mundialmente, além disso, a capoeira é reconhecida como patrimonio imaterial brasileiro, simbolo de resistencia!
             </p>
@@ -56,7 +56,7 @@
         <section>
             <h2>Sobre o Nosso segundo Jogo</h2>
             <h3>Jornada Para a Terra Sem Mal</h3>
-            <img src="https://www.instagram.com/p/DIg5Iv0xLsT/?igsh=Y3JhbnYwOXZ6cmQ=" alt="Jornada Para a Terra Sem Mal" width="400" height="450">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSan4XpCvt8FRVGF7r4iZ6ZuMOlh8AVhi3ayg&s" alt="Jornada Para a Terra Sem Mal" width="400" height="450">
             <p>Esse jogo  com toda certeza que ele é de grande valor historico podemos afirmar veemente que é um jogo jamais visto, além de ser um impacto inovador no cenário, respeitaremos e contaremos uma linda historia, de um ponto de vista esquecido no tempo.</p>
             <p>Nesse jogo abordaremos o mito indigena guarani da "Terra Sem Mal" por uma perspectiva fantastica, uma jornada cheia de desafio, que haverão de ser superados em equipe, para chegar nessa utopia que os guaranis tanto almejam ao longo das gerações.</p>
             <ul>
@@ -86,4 +86,5 @@
         </ul>
 </footer>
 </body>
+
 </html>
