add ex2 lista 5

--- a/Lista-5/exe-2/exercicio-2.html
+++ b/Lista-5/exe-2/exercicio-2.html
@@ -7,9 +7,9 @@
 </head>
 <body>
   <ul>
-    <li><a href="#">Home</a></li>
-    <li><a href="#">Sobre</a></li>
-    <li><a href="#">Contato</a></li>
+    <li><a href="https://s1.1zoom.me/b5955/97/Dogs_Golden_Retriever_Puppy_Grass_571188_640x960.jpg">Dog</a></li>
+    <li><a href="https://thfvnext.bing.com/th/id/OIP.5CxYs9ZMhmxseZdX5BElyQHaE7?w=294&h=196&c=7&r=0&o=7&cb=thfvnext&pid=1.7&rm=3">Little Cats</a></li>
+    <li><a href="https://th.bing.com/th/id/R.faa6fd339cbe3f48c9530b3dc49543b3?rik=ZOk6Q7KGN39lOA&riu=http%3a%2f%2f4.bp.blogspot.com%2f-VsPL78hh0rY%2fVA9aqrFBM0I%2fAAAAAAAABEk%2fxosUuHQlXTY%2fs1600%2fpeixes.jpg&ehk=NYE%2bId5sPqrq7i9HMEMbOd7Dcwq6iN%2fg6iBYk9R1swk%3d&risl=&pid=ImgRaw&r=0">Fish</a></li>
   </ul>
 </body>
 </html>
