--- a/Lista-6/index.html
+++ b/Lista-6/index.html
@@ -7,6 +7,8 @@
     <title>Meu Portfollio</title>
 </head>
 <body>
+    <div class="container">
+        <div class="topside">
     <header>
         <h1>Juan Lopes Ferreira</h1>
         <p>Aluno do curso de Desenvolvimento de Sistemas</p>
@@ -16,13 +18,14 @@
         <div class="sobre">
         
          <section>
-            <img src="./IMG/WhatsApp Image 2025-09-23 at 23.48.50.jpeg" alt="">
+            <img src="./IMG/WhatsApp Image 2025-09-26 at 02.08.56.jpeg" alt="">
             <h2>Sobre mim</h2>
             <P>
                 Olá meu nome é Juan Lopes Ferreira, tenho 22 anos e estou no primeiro modulo do curso de desenvolvimento de Sistemas.
                 Procuro absorver o maximo de conteudo que esse curso me proporcina, para que ao final posso eu mesmo me aprofundar em um seguimento especifico da area e a partir daí iniciar minha carreira na area de Desenvolvedor.
             </P>
          </section>
+            </div>
         </div>
         <!--Minhas habilidades-->
         <div class="habilitis">
@@ -65,5 +68,6 @@
     <footer>
         &copy;Eng. Juan Lopes Ferreira - Todos os direitos reservados. 
     </footer>
+ </div>
 </body>
 </html>
