--- a/Lista-2/exercicio-1.html
+++ b/Lista-2/exercicio-1.html
@@ -1,10 +1,11 @@
-<doctype html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta name ="viewport" content="width =device-width, initial-scale=1.0">
-        <title> Minha pagina pessoal</title>
-    </head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+
         <body>
             <header><hr>
                 <h1>Juan Lopes Ferreira</h1>
@@ -17,12 +18,12 @@
                 <section>
                     <h2>Meus hobbies</h2>
                     <ul>
-                        <li><strong>Praticar esportes</strong></li>
-                        <p>Meu pricipal hobbie atualmente com certeza é praticar esportes, em especefico andar de skate. isso sempre foi algo presente na minha vida. no geral eu sempre pratiquei todos os tipos de esportes desde jogar futebol até mesmo fazer ginastica artistica(mesmo não tendo vocação nenhuma para isso), e o skate acabou se tornando uma parte significamente valiosa da minha vida, meus amigos não eram todos que andavam de skate então isso se tornou o diferencial em mim. apesar de com o passar dos anos conheci muitas pessoas que andavam de skate, e de certa forma acabei até influenciando outras.</p>
-                        <li><strong>Dançar</strong></li>
-                        <p>Uma coisa que sempre me animou e animava as pessoas a minha volta era dançar, sempre dançei onde quer que estivesse e tenho muitas boas lembraças de todas as vezes que me encontrava nesse ambiente, muitas pessoas tambem tem essa memoria sobre mim</p>
-                        <li><strong>Ver filmes</strong></li>
-                        <p>Uma coisa tambem que construi toda a trajetoria da minha vida como criança, assim como a maoiria dos meninos da minha epoca, sempre gostei de filmes de super herois, filmes de ação, e conforme o tempo foi passando comecei a me interessar mais por varios tipos de filmes, principalmente os dramas</p>
+                        <li> <h3><strong>Praticar esportes</strong></h3>
+                        <p>Meu pricipal hobbie atualmente com certeza é praticar esportes, em especefico andar de skate. isso sempre foi algo presente na minha vida. no geral eu sempre pratiquei todos os tipos de esportes desde jogar futebol até mesmo fazer ginastica artistica(mesmo não tendo vocação nenhuma para isso), e o skate acabou se tornando uma parte significamente valiosa da minha vida, meus amigos não eram todos que andavam de skate então isso se tornou o diferencial em mim. apesar de com o passar dos anos conheci muitas pessoas que andavam de skate, e de certa forma acabei até influenciando outras.</p></li>
+                        <li> <h3><strong>Dançar</strong></h3>
+                        <p>Uma coisa que sempre me animou e animava as pessoas a minha volta era dançar, sempre dançei onde quer que estivesse e tenho muitas boas lembraças de todas as vezes que me encontrava nesse ambiente, muitas pessoas tambem tem essa memoria sobre mim</p></li>
+                        <li> <h3><strong>Ver filmes</strong></h3>
+                        <p>Uma coisa tambem que construi toda a trajetoria da minha vida como criança, assim como a maoiria dos meninos da minha epoca, sempre gostei de filmes de super herois, filmes de ação, e conforme o tempo foi passando comecei a me interessar mais por varios tipos de filmes, principalmente os dramas</p></li>
                     </ul>
                 </section>
             </main>   
