--- a/Lista-3/ex-6.html
+++ b/Lista-3/ex-6.html
@@ -17,9 +17,9 @@
     </ul>
 <h2>📧 Contato:</h2>
     <ul>
-        <li>Email: <a href="anasouza.dev@email.com" target="_blank"></a></li>
-        <li>LinkedIn: <a href="linkedin.com/in/anasouza" target="_blank"></a></li>
-        <li>GitHub: <a href="github.com/anasouza" target="_blank"></a></li>
+        <li>Email: <a href="anasouza.dev@email.com" target="_blank">E-mail</a></li>
+        <li>LinkedIn: <a href="linkedin.com/in/anasouza" target="_blank">linkedin</a></li>
+        <li>GitHub: <a href="github.com/anasouza" target="_blank">GitHub</a></li>
     </ul>
 </body>
 </html>
